changed header for form

--- a/index.html
+++ b/index.html
@@ -289,9 +289,10 @@ input[type='text'], input:not([type]), textarea {
 
 <div class="ss-required-asterisk" aria-hidden="true">* Required</div></div></div>
 <div class="ss-form">
-<!-- <form action="https://docs.google.com/forms/u/1/d/e/1FAIpQLScjq0rFnyRGFx6xZI3RxuTkfZeoGAQ_bE1MJe37xF1a0YOArA/formResponse" method="POST" id="ss-form" target="_self" autocomplete="on" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0;"> -->
+<!-- <form action="https://docs.google.com/forms/u/1/d/e/1FAIpQLScjq0rFnyRGFx6xZI3RxuTkfZeoGAQ_bE1MJe37xF1a0YOArA/formResponse" method="POST" id="ss-form" target="_self" autocomplete="on" onsubmit=""> -->
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='https://iancwe.github.io/formthankyou/';}"></iframe>
-<form action="https://docs.google.com/forms/u/1/d/e/1FAIpQLScjq0rFnyRGFx6xZI3RxuTkfZeoGAQ_bE1MJe37xF1a0YOArA/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
+<form action="https://docs.google.com/forms/u/1/d/e/1FAIpQLScjq0rFnyRGFx6xZI3RxuTkfZeoGAQ_bE1MJe37xF1a0YOArA/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;" id="ss-form" autocomplete="on">
+<ol role="list" class="ss-question-list" style="padding-left: 0;">
 
 <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
