--- a/index.html
+++ b/index.html
@@ -236,6 +236,11 @@ h6{
   color: #cec8c8;
 }
 
+p{
+  color: rgb(0,42,149);
+  font-size: 0.7em;
+}
+
 </style>
 
 
@@ -461,7 +466,12 @@ h6{
 <input type="hidden" name="fbzx" value="5569449843853172058">
 <div class="ss-send-email-receipt" style="margin-bottom: 4px;" dir="ltr"><label for="emailReceipt" style="display:inline;"></label></div>
 <div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
-<h6>By Submitting the form, I acknowledge that Sompo Insurance may collect, use, disclose and/or process my
+<p>By Submitting the form, you agree to the Terms and Conditions listed below the form.</p>
+<input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action ">
+</td>
+</tr></tbody></table></div></ol></form></div>
+<div class="ss-footer"><div class="ss-attribution">
+<h6>I acknowledge that Sompo Insurance may collect, use, disclose and/or process my
 personal data in accordance with the Personal Data Protection Act 2012 for the purposes
 and uses described in Sompo Insurance’s Privacy Policy (including the provision of
 protection, services related to this insurance policy, screening activities in accordance with
@@ -471,11 +481,8 @@ industry associations. Sompo Insurance’s Privacy Policy can be found at
 www.sompo.com.sg. I consent to receive marketing and promotional information from
 Sompo Insurance (e.g. via email, mail, SMS, etc.). I understand that I can withdraw or
 manage my consent to receive marketing and promotional information at
-www.sompo.com.sg</h6>
-<input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action ">
-</td>
-</tr></tbody></table></div></ol></form></div>
-<div class="ss-footer"><div class="ss-attribution"></div>
+www.sompo.com.sg<h6>
+</div>
 <div class="ss-legal"><div class="disclaimer-separator"></div>
 <script type='text/javascript' src='/static/forms/client/js/3439667018-formviewer_prd.js'></script>
 <script type="text/javascript">var submitted=false;</script>
