changed up css and descripton of form

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 
 .ss-choices {
   font-size: 1.000rem;
+  list-style-type: none;
+}
+
+.ss-q-title{
+  margin-top: 15px;
 }
 
 body {
@@ -294,7 +299,7 @@ p{
 
 <div class="ss-form-container"><div class="ss-header-image-container"><div class="ss-header-image-image"><div class="ss-header-image-sizer"></div></div></div>
 <div class="ss-top-of-page"><div class="ss-form-heading"><h1 class="ss-form-title" dir="ltr">Mobile Insurance Application Form</h1>
-<div class="ss-form-desc ss-no-ignore-whitespace" dir="ltr">Trunk Tech Pte Ltd X Tenet Sompo Partnership</div>
+<div class="ss-form-desc ss-no-ignore-whitespace" dir="ltr">Trunk Tech Pte Ltd X finexis advisory Pte Ltd X Tenet Sompo Partnership</div>
 
 <div class="ss-required-asterisk" aria-hidden="true">* Required</div></div></div>
 <div class="ss-form">
