--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
 
 .ss-q-title{
   margin-top: 15px;
-  margin-bottom: 5px;
+  /* margin-bottom: 5px; */
+  padding-bottom: 5px;
+}
+
+.ss-secondary-text{
   padding-bottom: 5px;
 }
 
