changed tel number again

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ p{
 <label class="ss-q-item-label" for="entry_423883520"><div class="ss-q-title">IMEI Number
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
 <span class="ss-required-asterisk" aria-hidden="true">*</span></div>
-<div class="ss-q-help ss-secondary-text" dir="auto">To find your mobile phone IMEI number, please dial <a href="tel: *#06#"><b>&quot;*#06#&quot;</b></a></div></label>
+<div class="ss-q-help ss-secondary-text" dir="auto">To find your mobile phone IMEI number, please dial <a href="tel: *#06#" target="_blank"><b>&quot;*#06#&quot;</b></a></div></label>
 
 <input type="text" name="entry.423883520" value="" class="ss-q-short" id="entry_423883520" dir="auto" aria-label="IMEI Number To find your mobile phone IMEI number, please dial &quot;*#06#&quot; IMEI Number should be 15 characters" aria-required="true" required="" pattern=".*^\d{15}(?:[-\s])?$.*" title="IMEI Number should be 15 characters">
 <!-- <div class="error-message" id="670801478_errorMessage">IMEI Number should be 15 characters</div>
