--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 
 <link href='/static/forms/client/css/3972046728-formview_st_ltr.css' type='text/css' rel='stylesheet'>
 <style type="text/css">
-/* body {
-  background-color: rgb(255,154,45);
-} */
 
 .ss-form-container, .ss-resp-card {
   background-color: rgb(255,255,255);
@@ -495,6 +492,8 @@ manage my consent to receive marketing and promotional information at
 www.sompo.com.sg<h6>
 </div>
 <div class="ss-legal"><div class="disclaimer-separator"></div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="assets/js/script.js" charset="utf-8"></script>
 <script type='text/javascript' src='/static/forms/client/js/3439667018-formviewer_prd.js'></script>
 <script type="text/javascript">var submitted=false;</script>
 <script type="text/javascript">H5F.setup(document.getElementById('ss-form'));
