done with nric validation, now fixing imei number

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ p{
 <div class="ss-form">
 <!-- <form action="https://docs.google.com/forms/u/1/d/e/1FAIpQLScjq0rFnyRGFx6xZI3RxuTkfZeoGAQ_bE1MJe37xF1a0YOArA/formResponse" method="POST" id="ss-form" target="_self" autocomplete="on" onsubmit=""> -->
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='https://iancwe.github.io/formthankyou/';}"></iframe>
-<form action="https://docs.google.com/forms/u/1/d/e/1FAIpQLScjq0rFnyRGFx6xZI3RxuTkfZeoGAQ_bE1MJe37xF1a0YOArA/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;" id="ss-form" autocomplete="on">
+<form action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSfWF30lZSg35HgW_8-WHgH9_JcqJ-in7BkOP9s28oawyT9IVQ/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;" id="ss-form" autocomplete="on">
 <ol role="list" class="ss-question-list" style="padding-left: 0;">
 
 <div class="ss-form-question errorbox-good" role="listitem">
@@ -331,17 +331,27 @@ p{
 <input type="text" name="entry.293262984" value="" class="ss-q-short" id="entry_293262984" dir="auto" aria-label="First Name  " aria-required="true" required="" title="">
 <div class="error-message" id="2034259156_errorMessage"></div>
 <!-- <div class="required-message">This is a required question</div> -->
-</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-<div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_179082515"><div class="ss-q-title">NRIC/FIN
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
-<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+</div></div></div>
 
-<input type="text" name="entry.179082515" value="" class="ss-q-short" id="entry_179082515" dir="auto" aria-label="NRIC/FIN  Please enter in valid 9 characters number" aria-required="true" required="" pattern=".*^[STFG]\d{7}[A-Z]$.*" title="Please enter in valid 9 characters number">
-<!-- <div class="error-message" id="459514629_errorMessage">Please enter in valid 9 characters number</div> -->
-<!-- <div class="required-message">This is a required question</div> -->
-</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<!-- NRIC input box -->
+<div class="ss-form-question errorbox-good" role="listitem">
+  <div dir="auto" class="ss-item ss-item-required ss-text">
+    <div class="ss-form-entry">
+      <label class="ss-q-item-label" for="entry_179082515">
+        <div class="ss-q-title">NRIC/FIN
+          <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+          <span class="ss-required-asterisk" aria-hidden="true">*</span>
+        </div>
+        <div class="ss-q-help ss-secondary-text" dir="auto"></div>
+      </label>
+      <input type="text" name="entry.179082515" value="" class="ss-q-short" id="entry_179082515" dir="auto" aria-label="NRIC/FIN  Please enter in valid 9 characters number" aria-required="true" required="" pattern=".*^[STFG]\d{7}[A-Z]$.*" title="Please enter in valid 9 characters number">
+      <!-- <div class="error-message" id="459514629_errorMessage">Please enter in valid 9 characters number</div> -->
+      <!-- <div class="required-message">This is a required question</div> -->
+    </div>
+  </div>
+</div>
+
+<div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-date"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_22490150"><div class="ss-q-title">Date of Birth
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
