--- a/index.html
+++ b/index.html
@@ -503,6 +503,7 @@ www.sompo.com.sg<h6>
 </div>
 <div class="ss-legal"><div class="disclaimer-separator"></div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHVmlBayU4j_idw_wFheFDd45cOoRlaOo&libraries=places"></script>
 <script src="assets/js/script.js" charset="utf-8"></script>
 <script type='text/javascript' src='/static/forms/client/js/3439667018-formviewer_prd.js'></script>
 <script type="text/javascript">var submitted=false;</script>
