able to pass through info using url, now testing populating field

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ p{
 <span class="ss-required-asterisk" aria-hidden="true">*</span></div>
 <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 
-<input type="text" name="entry.2097123057" value="" class="ss-q-short" id="entry_2097123057" dir="auto" aria-label="Last Name  " aria-required="true" required="" title="">
+<input type="text" name="entry.2097123057" value="" class="ss-q-short last_name" id="entry_2097123057" dir="auto" aria-label="Last Name  " aria-required="true" required="" title="">
 <div class="error-message" id="619421531_errorMessage"></div>
 <!-- <div class="required-message">This is a required question</div> -->
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
@@ -328,7 +328,7 @@ p{
 <span class="ss-required-asterisk" aria-hidden="true">*</span></div>
 <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 
-<input type="text" name="entry.293262984" value="" class="ss-q-short" id="entry_293262984" dir="auto" aria-label="First Name  " aria-required="true" required="" title="">
+<input type="text" name="entry.293262984" value="" class="ss-q-short first_name" id="entry_293262984" dir="auto" aria-label="First Name  " aria-required="true" required="" title="">
 <div class="error-message" id="2034259156_errorMessage"></div>
 <!-- <div class="required-message">This is a required question</div> -->
 </div></div></div>
@@ -407,7 +407,7 @@ p{
 <span class="ss-required-asterisk" aria-hidden="true">*</span></div>
 <div class="ss-q-help ss-secondary-text" dir="auto">Email should be lowercased</div></label>
 
-<input type="text" name="entry.72421677" value="" class="ss-q-short" id="entry_72421677" dir="auto" aria-label="Email Email should be lowercased Please enter valid email address" aria-required="true" required="" pattern=".*^[_a-z0-9-]+(\.[_a-z0-9-]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z ]{2,4})$.*" title="Please enter valid email address">
+<input type="text" name="entry.72421677" value="" class="ss-q-short email" id="entry_72421677" dir="auto" aria-label="Email Email should be lowercased Please enter valid email address" aria-required="true" required="" pattern=".*^[_a-z0-9-]+(\.[_a-z0-9-]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z ]{2,4})$.*" title="Please enter valid email address">
 <!-- <div class="error-message" id="393936337_errorMessage">Please enter valid email address</div>
 <div class="required-message">This is a required question</div> -->
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
